Fix alignment issue

--- a/components/forms/FilterableSearch/style.module.scss
+++ b/components/forms/FilterableSearch/style.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   font-family: $font-family;
   display: flex;
-  align-items: center;
+  align-items: top;
   width: 100%;
 
   $height: 36px;
